u updated projects and experience sections

--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@
                   </div>
                         <div class="hidden" id="projects_text"> 
                             <p>It's important to me that my projects have potential for social impact. With every new project, I try to learn new frameworks, languages, and tools for a challenging (but rewarding!) experience. See my resume for a complete list.</p>
-                            <a href="https://github.com/chiangvincent/hospitalityapp" target="_blank">Hospitality App</a>
+                            <h5><a href="https://github.com/dallas2018/team-1" target="_blank">SmartPortal</a> x <a href="https://careers.jpmorgan.com/us/en/students/programs/code-for-good" target="_blank">J.P. Morgan Code for Good</a></h5>
+                                <ul>    
+                                    <li> Selected and sponsored to attend all-expenses paid trip for Code for Good in Plano, TX. </li>
+                                    <li>Interviewed and worked with nonprofit SER Houston to revamp their online job application for user-friendly, notification-based design</li>
+                                    <li>Implemented modal lightboxes for controlled notification, and input validation with regex. Designed, tested, and presented in under 24 hrs.</li>
+                                </ul>
+                            <h5><a href="https://github.com/chiangvincent/hospitalityapp" target="_blank">Hospitality App</a></h5>
                                 <ul>    
                                     <li>Python web app that recommends hospitals based on distance and medicare coverage for common procedures</li>
-                                    <li>Worked wisth Google Distance Matrix, Geocoding, and Maps JavaScript APIs</li>
+                                    <li>Worked with Google Distance Matrix, Geocoding, and Maps JavaScript APIs</li>
                                     <li>MySQL for database, SQLAlchemy for dynamic models, Python/Flask framework and Bootstrap CDN for backend and frontend design, respectively</li>
                                 </ul>
+    
                             <h5><a href="https://github.com/wizgrao/splash" target="_blank">Splash</a> x <a href="https://www.eventbrite.com/e/developer-camp-10th-anniversary-tickets-36601458949#tickets" target="_blank"> San Jose Developer Camp</a></h5>
                                 <ul>    
                                     <li>Developed game to educate children on water pollution and conservation</li>
@@ -82,6 +89,12 @@
                                 </ul>
                         </div>
                         <div class="hidden" id="experience_text">
+                            <h5>AI/ML Student Developer @ <a href="https://www.fireflies.ai" target="_blank">  UC Berkeley Launchpad</a></h5> 
+                                <ul> 
+                                    <li>Student developer at UC Berkeley’s premiere AI/ML organization. Currently working on project that classifies food images using neural networks, Tensorflow, NumPy, and Scikit-learn.</li>
+                                    <li> Using 100k images from UPMC Food-101 dataset for predictive modeling</li>
+                                    <li>Attend weekly workshops on ML topics ranging from backpropagation to GANs to convolutional neural networks</li>
+                                </ul>
                             <h5>Data/Business Ops Intern @ <a href="https://www.fireflies.ai" target="_blank">  Fireflies.ai</a></h5> 
                                 <ul> 
                                     <li>Write Google scripts (JavaScript) to filter/clean sales ops data on Google Sheets pulled from Hubspot</li>
